k8s/book-store-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-store-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: book-store-service
      port:
        number: 8080
  rules:
    - host: k8s-cluster.romanow-alex.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-store-service
                port:
                  number: 8080
